# rabbit_quake

./: .gitignore  Cargo.toml  LICENSE  README.md  dev_readme.md  pp.bat  pyproject.toml  requirements.txt  ruff.toml
assets/: readme.md  readme.yaml  template.map  template.yaml  test.map  todo.md  todo.txt
assets/tests/: hare.wad
assets/tests/maps/: debug_map.bsp  debug_map.lit
assets/tests/pack/maps/: packtest.bsp  packtest.prt  packtest.texinfo.json
assets/tests/pack/mapsrc/: packtest.map
cfg/: keybinds.toml  settings.toml  settings.yaml
rabbitquake/: autosave.py  env_rotate.py  img.py  jamgen.py  notpectin.py  pp.py  splitenv.py  submit.py  symlink.py  symlink_cfg.py  wav.py  x_scale.py
rabbitquake/app/: bsp.py  deps.py  ericw.py  manip.py  palette.py  parse.py  paths.py  settings.py  shared.py  wad.py
rabbitquake/pp/: autocount.py
rabbitquake/ppdefs/: autocount.py  clip.py
src/: app_paths.py  appsettings.py  autosave.py  bcolors.py  conv.py  debug.py  ericw.py  files.py  img.py  jamgen.py  jampack.py  main.rs  parse.py  paths.py  pp.py  settings.py  skybox.py  splitenv.py  submit.py  symlink.py  symlink_cfg.py  tb.py  templates.py  test.py  textures_from_map.py  wav.py  x_scale.py
src/app/: bcolors.py  bsp.py  deps.py  ericw.py  palette.py  parse.py  paths.py  settings.py  shared.py  wad.py
src/godot/: icon.svg.import
src/pyui/: project.godot
src/rqle/: project.godot  view_wad.gd  view_wad.tscn  wad.gd
tests/: readme.md  test_autosave.py  test_deps.py  test_generate.py  test_pack.py  test_parser.py  test_submit.py
(+8 files in other folders)
