[package]
name = "rabbit_quake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inputbot = "0.6"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"
zip = "1.1.0"
open = "5.1.2"
shalrath = "0.2.6"
